--- a/Paper/latex/sn-bibliography.bib
+++ b/Paper/latex/sn-bibliography.bib
@@ -312,6 +312,39 @@
 	volume    = "2",
 	note      = "arXiv:2407.15462v2 [cs.IR] 14 Aug 2024"
 }
+@inproceedings{Zhu_2018,
+    series="KDD ’18",
+	title="Learning Tree-based Deep Model for Recommender Systems",
+	url="http://dx.doi.org/10.1145/3219819.3219826",
+	DOI="10.1145/3219819.3219826",
+	booktitle="Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining",
+	publisher="ACM",
+	author="Zhu, Han and Li, Xiang and Zhang, Pengye and Li, Guozheng and He, Jie and Li, Han and Gai, Kun",
+	year="2018",
+	month=jul, pages="1079–1088",
+	collection="KDD ’18" 
+	}
+@misc{kang2018selfattentivesequentialrecommendation,
+	title="Self-Attentive Sequential Recommendation", 
+	author="Wang-Cheng Kang and Julian McAuley",
+	year="2018",
+	eprint="1808.09781",
+	archivePrefix="arXiv",
+	primaryClass="cs.IR",
+	url="https://arxiv.org/abs/1808.09781", 
+}
+@article{Harper2015,
+	author    = "F. Maxwell Harper and Joseph A. Konstan",
+	title     = "The MovieLens Datasets: History and Context",
+	journal   = "ACM Transactions on Interactive Intelligent Systems",
+	volume    = "5",
+	number    = "4",
+	year      = "2015",
+	month     = "dec",
+	doi       = "10.1145/2827872",
+	publisher = "Association for Computing Machinery",
+	address   = "New York, NY, USA"
+}
 =========================================================================%%
 %% while using chicago reference style, both abbreviated and expanded form of %%
 %% author name format is acceptable. Refer below example for expanded form    %%
